--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "2048",
   "version": "1.0.0",
-  "main": "src/game.js",
+  "main": "src/index.js",
   "dependencies": {
     "accepts": "^1.3.8",
     "acorn": "^8.13.0",
@@ -323,8 +323,8 @@
     "yocto-queue": "^1.1.1"
   },
   "scripts": {
-    "start": "webpack serve --open", 
-    "build": "webpack"  
+    "start": "webpack serve --open",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -334,7 +334,9 @@
     "@babel/preset-env": "^7.25.9",
     "babel-loader": "^9.2.1",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.95.0",
