--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "2048",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "index.js",
   "dependencies": {
     "accepts": "^1.3.8",
     "acorn": "^8.13.0",
